1. added card view menu 2. optimized decks list building 3. added todays deck access

--- a/www/sass/_menu.scss
+++ b/www/sass/_menu.scss
@@ -15,6 +15,7 @@
   width: $menu-width;
   background-color: $menu-background-color;
   color: $menu-color;
+  overflow-y: scroll;
   .menu-item {
     border-bottom: solid 1px $menu-border-color;
     font-size: 20px;
