1. implemented decks creation/removing 2. implemented switching deck-set language

--- a/www/sass/_deck-info-dialog.scss
+++ b/www/sass/_deck-info-dialog.scss
@@ -9,6 +9,9 @@
   .title {
     height: $button-height + (2 * $button-padding);
     font-size: 22px;
+    .text {
+      padding-right: $button-min-width + $button-padding;  
+    }
     .close {
       float: right;
       @include square-button();
