--- a/www/sass/_select-item-dialog.scss
+++ b/www/sass/_select-item-dialog.scss
@@ -1,10 +1,17 @@
 .dialog {
   .variant {
     @include button();
+    height: 30px;
     .checkbox{
       float: left;
       font-family: FontAwesome;
-      font-size: 22px !important;
+      font-size: 30px !important;
+      width: 30px;
+      text-align: left;
+    }
+    .new-item{
+      font-size: 16px;
+      width: 60%;
     }
   }
   .commands {
