--- a/www/sass/_card-view.scss
+++ b/www/sass/_card-view.scss
@@ -29,13 +29,14 @@
         font-size: 16px;
         padding: 10px 0 0 10px;
       }
-      .top {
+      .top,
+      .bottom {
         font-style: italic;
-        font-size: 20px;
+        font-size: $card-notes-text-font-size;
       }
       .text{
         font-weight: bold;
-        font-size: 22px;
+        font-size: $card-text-font-size;
       }
     }
   }
