--- a/www/sass/_decks-list.scss
+++ b/www/sass/_decks-list.scss
@@ -4,7 +4,7 @@
   .cancel-edit,
   .remove-deck {
     font-family: FontAwesome;
-    font-size: 22px !important;
+    font-size: $dialog-title-font-size !important;
   }
   .separator{
     $separator-height : $button-height + ($button-padding * 2);
@@ -13,7 +13,7 @@
     margin: $button-margin 0;
     .separator-line{
       .separator-half {
-        margin-right: $button-min-width + 30px;
+        margin-right: $button-min-width * 2;
         height: $button-height;
         border-bottom: solid 1px $header-border-color;
       }
@@ -22,8 +22,8 @@
       width: 100%;
       display: none;
       .editor{
-        margin-right: $button-min-width + 30px;
-        margin-left: $button-min-width + 30px;
+        margin-right: $button-min-width * 2;
+        margin-left: $button-min-width * 2;
         padding: 0 7px 0 0px;
         input{
           $editor-padding: 1%;
