--- a/www/sass/_review-mode-dialog.scss
+++ b/www/sass/_review-mode-dialog.scss
@@ -4,7 +4,7 @@
     .state{
       float: left;
       font-family: FontAwesome;
-      font-size: 22px !important;
+      font-size: $dialog-title-font-size !important;
     }
   }
 }
