--- a/www/sass/_card-view.scss
+++ b/www/sass/_card-view.scss
@@ -4,16 +4,22 @@
       padding: 0;
       .selected{
         font-family: FontAwesome;
-        font-size: 50px;
-        width: 50px;
+        font-size: $card-select-font-size;
+        width: $card-select-font-size;
         display: inline-block;
         text-align: left;
       }
       .text{
         display: inline-block;
         vertical-align: middle;
-        padding-bottom: 35px;
+        padding-bottom: $card-name-padding-bottom;
         margin-left: 10px;
+        .side-front{
+          border-top: solid 2px $header-border-color;
+        }
+        .side-back{
+          border-bottom: solid 2px $header-border-color;
+        }
       }
     }
   }
@@ -26,7 +32,7 @@
         left: 0;
         top: $header-height + $button-height;
         font-family: FontAwesome;
-        font-size: 16px;
+        font-size: $card-reviews-font-size;
         padding: 10px 0 0 10px;
       }
       .top,
