refactored UI to simplify navigation and fixed adaptation to screen size

--- a/www/sass/index.scss
+++ b/www/sass/index.scss
@@ -156,7 +156,7 @@ body,
   .header {
     position: relative;
     @include screen-header();
-    .back-button,
+    .home-button,
     .menu-button {
       @include square-button();
     }
