--- a/www/sass/_loading-cards-view.scss
+++ b/www/sass/_loading-cards-view.scss
@@ -1,4 +1,4 @@
-.import {
+.dialog {
   .content {
     .message{
       text-align: center;
@@ -6,6 +6,20 @@
         display: inline-block;
         width: 16px;
         height: 11px;
+        background-image: inline-image('ajax-pulse.gif');
+      }
+    }
+    .button{
+      position: relative;
+      @include button();
+      .loading{
+        position: absolute;
+        left: 5px;
+        bottom: 5px;
+        width: 16px;
+        height: 11px;
+      }
+      .loading-active {
         background-image: inline-image('ajax-pulse.gif');
       }
     }
