1. unified dialog styles 2. added content scrolling for large dialogs

--- a/www/sass/_create-item-dialog.scss
+++ b/www/sass/_create-item-dialog.scss
@@ -1,6 +1,6 @@
 .dialog {
   .editor {
-    padding: $dialog-padding;
+    padding: $dialog-content-padding;
     .new-item-name {
       width: 100%;
       font-size: $dialog-line-font-size;
