--- a/www/sass/index.scss
+++ b/www/sass/index.scss
@@ -59,6 +59,7 @@ $card-text-font-size: 56px;
 $card-notes-text-font-size: 50px;
 $card-select-font-size: 80px;
 $card-reviews-font-size: 32px;
+$card-review-sign-top: 28px;
 
 $notification-font-size: 36px;
 $error-color: red;
