--- a/src/sass/_menu.scss
+++ b/src/sass/_menu.scss
@@ -1,14 +1,24 @@
-.menu{
-  position: absolute;
-  right: 0;
-  top: $header-height + ($button-padding * 2) + $header-border;
-  width: $menu-width;
-  background-color: $menu-background-color;
-  color: $menu-color;
-  overflow-y: scroll;
-  .menu-item {
-    border-bottom: solid 1px $menu-border-color;
-    font-size: $menu-item-font-size;
-    padding: $menu-padding;
+.menu-view {
+  .menu{
+    position: absolute;
+    right: 0;
+    top: $header-height + ($button-padding * 2) + $header-border;
+    width: $menu-width;
+    background-color: $menu-background-color;
+    color: $menu-color;
+    overflow-y: scroll;
+    .menu-item {
+      border-bottom: solid 1px $menu-border-color;
+      font-size: $menu-item-font-size;
+      padding: $menu-padding;
+    }
+  }
+  .overlay {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 99%;
+    height: 99%;
+    opacity : 0.3; 
   }
 }
