--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -1,3 +1,6 @@
-<% _.each(menus, function(menu){ %>
-	<div class="menu-item" data-target="<%= menu.id %>"><%= menu.name %></div>
-<% }); %>
+<div class="overlay"></div>
+<div class="menu">
+	<% _.each(menus, function(menu){ %>
+		<div class="menu-item" data-target="<%= menu.id %>"><%= menu.name %></div>
+	<% }); %>
+</div>
