--- a/src/sass/_menu.scss
+++ b/src/sass/_menu.scss
@@ -14,11 +14,6 @@
     }
   }
   .overlay {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 99%;
-    height: 99%;
-    opacity : 0.3; 
+    @include overlay;
   }
 }
