--- a/src/templates/create-item.html
+++ b/src/templates/create-item.html
@@ -1,13 +1,16 @@
-<div class="header">
-	<div class="button close fa-ban"></div>
-	<div class="title"><%= title %></div>
-	<div class="clearfix"></div>
-</div>
-<div class="content">
-	<div class="editor">
-		<input type="text" class="new-item-name"/>	
+<div class="overlay"></div>
+<div class="dialog">
+	<div class="header">
+		<div class="button close fa-ban"></div>
+		<div class="title"><%= title %></div>
+		<div class="clearfix"></div>
 	</div>
-	<div class="commands">
-		<div class="button create">create</div>
+	<div class="content">
+		<div class="editor">
+			<input type="text" class="new-item-name"/>	
+		</div>
+		<div class="commands">
+			<div class="button create">create</div>
+		</div>
 	</div>
 </div>
