--- a/src/templates/deck-info.html
+++ b/src/templates/deck-info.html
@@ -1,23 +1,26 @@
-<div class="header">
-	<div class="button close fa-ban"></div>
-	<div class="title">Deck Information</div>
-	<div class="clearfix"></div>
-</div>
-<div class="content">
-	<div class="line">
-		<span class="label">Name:</span>
-		<span class="value"><%= name %></span>
+<div class="overlay"></div>
+<div class="dialog">
+	<div class="header">
+		<div class="button close fa-ban"></div>
+		<div class="title">Deck Information</div>
+		<div class="clearfix"></div>
 	</div>
-	<div class="line">
-		<span class="label">Language:</span>
-		<span class="value"><%= lang %></span>
-	</div>
-	<div class="line">
-		<span class="label">Cards total:</span>
-		<span class="value"><%= cardsCount %></span>
-	</div>
-	<div class="line">
-		<span class="label">Cards selected:</span>
-		<span class="value"><%= cardsSelected %></span>
+	<div class="content">
+		<div class="line">
+			<span class="label">Name:</span>
+			<span class="value"><%= name %></span>
+		</div>
+		<div class="line">
+			<span class="label">Language:</span>
+			<span class="value"><%= lang %></span>
+		</div>
+		<div class="line">
+			<span class="label">Cards total:</span>
+			<span class="value"><%= cardsCount %></span>
+		</div>
+		<div class="line">
+			<span class="label">Cards selected:</span>
+			<span class="value"><%= cardsSelected %></span>
+		</div>
 	</div>
 </div>
