--- a/src/templates/import-from-web-langs.html
+++ b/src/templates/import-from-web-langs.html
@@ -1,14 +1,17 @@
-<div class="header">
-	<div class="button close fa-ban"></div>
-	<div class="title">Cards Import [1/2]</div>
-	<div class="clearfix"></div>
-</div>
-<div class="content">
-	<div class="loading">
-		<div class="message">Connecting to the server <span class="connecting"></span></div>
+<div class="overlay"></div>
+<div class="dialog">
+	<div class="header">
+		<div class="button close fa-ban"></div>
+		<div class="title">Cards Import [1/2]</div>
+		<div class="clearfix"></div>
 	</div>
-	<div class="languages hidden">
-		<div class="message">Select source language</div>
-		<div class="langs-list"></div>
+	<div class="content">
+		<div class="loading">
+			<div class="message">Connecting to the server <span class="connecting"></span></div>
+		</div>
+		<div class="languages hidden">
+			<div class="message">Select source language</div>
+			<div class="langs-list"></div>
+		</div>
 	</div>
 </div>
