restructuring: all view logic and related resources are collected into dedicated view dirs

--- a/src/js/app/views/common/_common.scss
+++ b/src/js/app/views/common/_common.scss
@@ -240,7 +240,7 @@ body,
   display: none;
 }
 
-@import "decks-list";
+/*@import "decks-list";
 @import "card-view";
 @import "menu";
 @import "dialog";
@@ -250,3 +250,4 @@ body,
 @import "loading-cards-view";
 @import "create-item-dialog";
 
+*/
